[metadata]
name = neutron_ovn_network_logging_parser
summary = Neutron OVN Network Logging Parser
description_file =
    README.rst
author = VEXXHOST, Inc.
author_email = support@vexxhost.com
url = https://vexxhost.github.io/neutron-ovn-network-logging-parser/
project_urls =
    Bug Tracker = https://github.com/vexxhost/neutron-ovn-network-logging-parser/issues
    Documentation = https://vexxhost.github.io/neutron-ovn-network-logging-parser/
    Source Code = https://github.com/vexxhost/neutron-ovn-network-logging-parser
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    neutron_ovn_network_logging_parser

[entry_points]
wsgi_scripts =
    neutron-ovn-network-logging-parser-wsgi = neutron_ovn_network_logging_parser.wsgi:create_app
